Task1 and Task2 reworkerd

--- a/Manipulating DOM with JS/Task1.html
+++ b/Manipulating DOM with JS/Task1.html
@@ -18,6 +18,6 @@
             parentElement.appendChild(document.createElement(String.prototype.toUpperCase.call(arguments[index])));
         }
     }
-    createElement("div","p","img","div");
-</script>
+    createElement("div","p","img","div","p");
+ </script>
 </html>
