Ajax task completed. (IMDB API)

--- a/Manipulating DOM with JS/Task5.html
+++ b/Manipulating DOM with JS/Task5.html
@@ -20,7 +20,7 @@ function ShoppingCart(){
     var cartDiv=document.getElementById("cartDiv");
     this.products=[];
     this.checkIfInArray=function(product){
-        return this.products.includes(product);
+        return this.products.inlcudes(product)
     }
    
     this.addProduct=function(p){
