--- a/Events/Task1.html
+++ b/Events/Task1.html
@@ -8,7 +8,11 @@
     <form action="">
         <input id="textInput1" type="text">
         <input id="textInput2" type="text">
-        <select name="select" id="select"></select>
+        <select name="select"  id="select">
+            <option></option>
+            <option>Male</option>
+            <option>Female</option>
+        </select>
     </form>
 <script>
     var firstInput=document.getElementById("textInput1");
@@ -16,10 +20,10 @@
     firstInput.addEventListener("keyup",bigLetters,false);
     secondInput.addEventListener("keyup",bigLetters,false);
 
-    function bigLetters(e){
-        if(e.keyCode>=65 && e.keyCode<=90){
-            e.target.value=e.target.value.toUpperCase();
-        }
+function bigLetters(e){
+    if(e.keyCode>=65 && e.keyCode<=90){
+        e.target.value=e.target.value.toUpperCase();
+    }
 }
 </script>
 </body>
